# GodotDelta

./: README.md
cmake/: CMakeLists.txt  llvm-mingw-x86_64.cmake
cpp/cli/: cli.app.cpp  cli.app.h  cli.basic.cpp  cli.commands.h  cli.runtime_patch.cpp  cli.sandbox.cpp  cli.shared.cpp  cli.shared.h  main.cpp
cpp/core/patch/: merged_pack_builder.cpp  merged_pack_builder.h  patch_manifest.cpp  patch_manifest.h  patch_pack_builder.cpp  patch_pack_builder.h  runtime_patch_resolver.cpp  runtime_patch_resolver.h
cpp/core/pck/: pck_embedded.cpp  pck_embedded.h  pck_format.h  pck_reader.cpp  pck_reader.h  pck_writer.cpp  pck_writer.h
cpp/core/workspace/: workspace.diff.cpp  workspace.h  workspace.snapshot.cpp
godot/: export_presets.cfg  icon.png.import  main.tscn  project.godot
godot/script/: main.gd  main.gd.uid
godot/translation/: translation.csv  translation.csv.import  translation.en.translation  translation.ko.translation
